--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.539.0",
     "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.2",
+    "radix-ui": "^1.4.3",
     "react": "^19.1.1",
+    "react-day-picker": "^9.8.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.0",
     "sonner": "^2.0.7",
